--- a/POC_SVA_IOS/Main.storyboard
+++ b/POC_SVA_IOS/Main.storyboard
@@ -75,28 +75,23 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Bo" lineBreakMode="tailTruncation" minimumFontSize="10" id="228" translatesAutoresizingMaskIntoConstraints="NO" textAlignment="center">
-                                <rect key="frame" x="166" y="273" width="42" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Bo" lineBreakMode="tailTruncation" minimumFontSize="10" id="228" translatesAutoresizingMaskIntoConstraints="NO" textAlignment="center" fixedFrame="YES">
+                                <rect key="frame" x="166" y="45" width="42" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <constraints>
-                                    <constraint id="236" firstAttribute="width" constant="42"/>
-                                    <constraint id="237" firstAttribute="height" constant="21"/>
-                                </constraints>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="242" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="164" y="471" width="46" height="30"/>
+                                <rect key="frame" x="164" y="580" width="46" height="30"/>
                                 <state key="normal" title="Close">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="730" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" image="Bo.jpg">
+                                <rect key="frame" x="54" y="167" width="268" height="375"/>
+                            </imageView>
                         </subviews>
-                        <constraints>
-                            <constraint id="238" firstItem="228" firstAttribute="leading" secondItem="7" secondAttribute="leading" constant="166"/>
-                            <constraint id="239" constant="273" firstItem="228" firstAttribute="top" secondItem="7" secondAttribute="top"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="boCloseButton" destination="242" id="name-outlet-242"/>
@@ -104,7 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="422" y="0.0"/>
+            <point key="canvasLocation" x="859" y="54"/>
         </scene>
         <scene sceneID="247">
             <objects>
@@ -119,18 +114,21 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="252" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="164" y="480" width="46" height="30"/>
+                                <rect key="frame" x="164" y="578" width="46" height="30"/>
                                 <state key="normal" title="Close">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Snow" lineBreakMode="tailTruncation" minimumFontSize="10" id="253" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="166" y="282" width="51" height="21"/>
+                                <rect key="frame" x="162" y="47" width="51" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="729" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" image="Snow.jpg">
+                                <rect key="frame" x="52" y="168" width="271" height="378"/>
+                            </imageView>
                         </subviews>
                     </view>
                     <connections>
@@ -139,7 +137,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="250" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="448" y="25"/>
+            <point key="canvasLocation" x="667" y="51"/>
         </scene>
         <scene sceneID="453">
             <objects>
@@ -153,8 +151,8 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="458" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="164" y="483" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="458" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                                <rect key="frame" x="168" y="1098" width="46" height="30"/>
                                 <state key="normal" title="Close">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -163,12 +161,21 @@
                                 </constraints>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Celeste" lineBreakMode="tailTruncation" minimumFontSize="10" id="459" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="156" y="284" width="64" height="21"/>
+                                <rect key="frame" x="156" y="45" width="64" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="722" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" image="Celeste.jpg">
+                                <rect key="frame" x="52" y="165" width="271" height="374"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="743" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="164" y="571" width="46" height="30"/>
+                                <state key="normal" title="Close">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint id="714" firstItem="458" firstAttribute="leading" secondItem="455" secondAttribute="leading" constant="164"/>
@@ -177,14 +184,20 @@
                     </view>
                     <connections>
                         <outlet property="celesteCloseButton" destination="458" id="name-outlet-458"/>
+                        <outlet property="celesteCloseButton" destination="743" id="name-outlet-743"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="456" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="477" y="54"/>
+            <point key="canvasLocation" x="282" y="55"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedScreenMetrics key="destination" type="retina47"/>
     </simulatedMetricsContainer>
+    <resources>
+        <image name="Celeste.jpg" width="2988" height="5312"/>
+        <image name="Snow.jpg" width="2988" height="5312"/>
+        <image name="Bo.jpg" width="2988" height="5312"/>
+    </resources>
 </document>
